Добавить валидацию даты при обновлении события админом Добавить валидацию даты при обновлении события пользователем Добавить валидацию даты при создании события пользователем Passed(175), Failed(35)